--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         }
     </style>
     <body>
-        
+        <img src="chikara logo.png" alt="">
+        <h1>Bienvenidos! ようこそ</h1>        
     </body>
-    <img src="chikara logo.png" alt="">
+
 </html>
