Ajustes Juego de memoria

--- a/game/index.html
+++ b/game/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link  rel="icon" href="chikara_logo.png" type="image/png" />
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <title>Juego Chikara</title>
     <!--<link href="index.css" rel="stylesheet">-->
@@ -10,7 +11,7 @@
 
 <body>
 
-
+    <h3>Prototipo juego de Memoria By: Chikara</h3>
 
 
     <div class="parejas">
