--- a/modules/home/index.html
+++ b/modules/home/index.html
@@ -25,8 +25,32 @@
                 por el autoaprendizaje.
             </article>
     </section>
-</section>
-<section class="twitch"></section>
-<section class="youtube"></section>
-<section class="contact"></section>
+    <section class="twitch"></section>
+    <section class="youtube">
+        <iframe  src="https://www.youtube.com/embed/wd4nJPfnq34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </section>
+    <section class="contact">
+        <div>
+            <h3>Escríbenos</h3>
+            <img src="res/images/chikara_logo.png" alt="">
+            <p>chikara.organización@gmail.com</p>
+        </div>
+        <div class="form">
+            <form action="">
+                <label for="">Nombre</label>
+                <input type="text">
+                <label for="">Correo electrónico</label>
+                <input type="text">
+                <label for="">Texto</label>
+                <textarea>
+
+    </textarea>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        © Copyright 2021 by duoso SAS
+    </footer>
 </section>
