add icon, responsive

--- a/modules/home/index.html
+++ b/modules/home/index.html
@@ -1,6 +1,50 @@
 <section id="home-view">
     <Menu></Menu>
     <div class="home-banner">
+
+        <div class="intro">
+            <img src="res/images/vector.png" alt="" class="vector">
+            <div class="content">
+                <img src="res/images/chikara_name.png" alt="" class="name">
+                <p class="text">Somos comunidad juvenil que desarrolla conocimientos sobre
+                    la cultura japonesa.</p>
+            </div>
+            <img src="res/images/vector.png" alt="" class="vector-inverse">
+
+            <div class="social">
+                <img src="res/images/facebook.svg" alt="">
+                <img src="res/images/discord.svg" alt="">
+                <img src="res/images/insta.svg" alt="">
+                <img src="res/images/youtube.svg" alt="">
+                <img src="res/images/gmail.svg" alt="">
+            </div>
+
+        </div>
+        <div class="register">
+            <img src="res/images/vector.png" alt="" class="vector">
+            <form action="">
+                <header>
+                    Regístrate aquí
+                    <div class="neko">
+
+                        <img src="res/images/neko.png" alt="">
+                    </div>
+                </header>
+
+                <label for="">Nombre</label>
+                <input type="text">
+                <label for="">Apellido</label>
+                <input type="text">
+                <label for="">Correo electrónico</label>
+                <input type="text">
+                <label for="">Celular</label>
+                <input type="text">
+                <label for="">País</label>
+                <input type="text">
+            </form>
+        </div>
+
+
     </div>
     <section class="about">
         <div class="title">Conociendo Japón contigo</div>
@@ -25,9 +69,20 @@
                 por el autoaprendizaje.
             </article>
     </section>
-    <section class="twitch"></section>
+    <section class="twitch">
+        <div class="logo">
+            <img src="res/images/chikara_slogan.png" alt="">
+        </div>
+        <div class="transmition">
+            PRONTO TRANSMISIÓN
+            <img src="res/images/logo_twitch.png" alt="">
+            /chikaraoficial
+        </div>
+    </section>
     <section class="youtube">
-        <iframe  src="https://www.youtube.com/embed/wd4nJPfnq34" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/wd4nJPfnq34" title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
 
     </section>
     <section class="contact">
@@ -43,9 +98,7 @@
                 <label for="">Correo electrónico</label>
                 <input type="text">
                 <label for="">Texto</label>
-                <textarea>
-
-    </textarea>
+                <textarea rows="5"></textarea>
             </form>
         </div>
     </section>
