--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
-	<title></title>
+	<title>| CHIKARA ORGNAIZACIÓN</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, viewport-fit=cover">
 	<link rel="stylesheet" href="res/theme/style.css">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/304913/snap.svg-min.js"></script>
 	<script src="res/scripts/lib/require.js"></script>
-	
+
 	<script src="res/scripts/config.js"></script>
 
 </head>
