Formulario de inscripción

--- a/modules/home/index.html
+++ b/modules/home/index.html
@@ -21,27 +21,9 @@
 
         </div>
         <div class="register">
-            <img src="res/images/vector.png" alt="" class="vector">
-            <form action="">
-                <header>
-                    Regístrate aquí
-                    <div class="neko">
-
-                        <img src="res/images/neko.png" alt="">
-                    </div>
-                </header>
-
-                <label for="">Nombre</label>
-                <input type="text">
-                <label for="">Apellido</label>
-                <input type="text">
-                <label for="">Correo electrónico</label>
-                <input type="text">
-                <label for="">Celular</label>
-                <input type="text">
-                <label for="">País</label>
-                <input type="text">
-            </form>
+            <div class="invitation">
+                <img src="res/images/invitation.jpeg" alt="">
+            </div>
         </div>
 
 
