--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>| CHIKARA ORGNAIZACIÓN</title>
+	<title>| CHIKARA ORGANIZACIÓN</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, viewport-fit=cover">
 	<link rel="stylesheet" href="res/theme/style.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
