--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8">
 	<title>| CHIKARA ORGANIZACIÓN</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, viewport-fit=cover">
+	<meta http-equiv="Expires" content="0">
+	<meta http-equiv="Last-Modified" content="0">
+	<meta http-equiv="Cache-Control" content="no-cache, mustrevalidate">
+	<meta http-equiv="Pragma" content="no-cache">
 	<link rel="stylesheet" href="res/theme/style.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
