--- a/modules/enroll/course.html
+++ b/modules/enroll/course.html
@@ -5,7 +5,7 @@
         <form @submit.prevent="sendData" class="search">
             <img src="res/images/neko.png" alt="">
 
-            <h1> Utiliza tus datos ingresados en el preregistro</h1>
+            <h1> Utilizar la información utilizada cuando se registro</h1>
             <div class="field">
                 <label for="">Nº Identificación</label>
                 <input type="text" v-model="data.USER_identification" placeholder="" required :disabled="data.USER_valid">
